init dashboard & calendar & day components

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -11,6 +11,17 @@
         "command": "webpack-cli build",
         "args": [
           "node-env=production"
+        ],
+        "styles": [
+          "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
+          "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less"
+        ],
+        "assets": [
+          {
+            "glob": "**/*",
+            "input": "node_modules/@taiga-ui/icons/src",
+            "output": "assets/taiga-ui/icons"
+          }
         ]
       },
       "configurations": {
