--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -33,7 +33,7 @@
         "styles": [
           "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
           "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
-          "apps/front/src/styles.css"
+          "apps/front/src/styles.less"
         ],
         "scripts": []
       },
