--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@lifestyle-dashboard/calendar": ["libs/front/ui/calendar/src/index.ts"],
       "@lifestyle-dashboard/day-card": ["libs/front/ui/day-card/src/index.ts"],
+      "@lifestyle-dashboard/timetracker-widget": [
+        "libs/front/ui/timetracker-widget/src/index.ts"
+      ],
       "@lifestyle-dashboard/widget": ["libs/shared/widget/src/index.ts"]
     }
   },
