--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@lifestyle-dashboard/calendar": ["libs/front/ui/calendar/src/index.ts"],
+      "@lifestyle-dashboard/timetracker": [
+        "libs/shared/timetracker/src/index.ts"
+      ],
       "@lifestyle-dashboard/timetracker-widget": [
         "libs/front/ui/timetracker-widget/src/index.ts"
       ],
