--- a/libs/front/ui/day-card-dialog/project.json
+++ b/libs/front/ui/day-card-dialog/project.json
@@ -1,8 +1,8 @@
 {
-  "name": "day-card",
+  "name": "day-card-dialog",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/front/ui/day-card/src",
-  "prefix": "lib",
+  "sourceRoot": "libs/front/ui/day-card-dialog/src",
+  "prefix": "lifestyle",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/front/ui/day-card/jest.config.ts"
+        "jestConfig": "libs/front/ui/day-card-dialog/jest.config.ts"
       }
     },
     "lint": {
