--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,12 @@
       "@lifestyle-dashboard/day-card-dialog": [
         "libs/front/ui/day-card-dialog/src/index.ts"
       ],
+      "@lifestyle-dashboard/lifestyle-config-service": [
+        "libs/front/api/lifestyle-config-service/src/index.ts"
+      ],
+      "@lifestyle-dashboard/lifestyle-data-service": [
+        "libs/front/api/lifestyle-data-service/src/index.ts"
+      ],
       "@lifestyle-dashboard/timetracker": [
         "libs/shared/timetracker/src/index.ts"
       ],
