--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,7 +33,10 @@
       "@lifestyle-dashboard/timetracker-widget": [
         "libs/front/ui/timetracker-widget/src/index.ts"
       ],
-      "@lifestyle-dashboard/widget": ["libs/shared/widget/src/index.ts"]
+      "@lifestyle-dashboard/widget": ["libs/shared/widget/src/index.ts"],
+      "@lifestyle-dashboard/widget-name-pipe": [
+        "libs/front/ui/widget-name-pipe/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
