--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@taiga-ui/event-plugins": "^4.0.2",
     "@taiga-ui/icons": "^4.30.0",
     "@taiga-ui/kit": "^4.20.0",
+    "@taiga-ui/legacy": "^4.31.0",
     "axios": "^1.6.0",
     "json-server": "^1.0.0-beta.3",
     "reflect-metadata": "^0.1.13",
