--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test:front": "nx test front",
     "start:api": "nx serve api",
     "build:api": "nx build api",
-    "test:api": "nx test api"
+    "test:api": "nx test api",
+    "nx:format:fix": "nx format:write"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.0.0",
-    "@angular/common": "~19.0.0",
-    "@angular/compiler": "~19.0.0",
-    "@angular/core": "~19.0.0",
-    "@angular/forms": "~19.0.0",
-    "@angular/platform-browser": "~19.0.0",
-    "@angular/platform-browser-dynamic": "~19.0.0",
-    "@angular/router": "~19.0.0",
+    "@angular/animations": "19.2.5",
+    "@angular/common": "19.2.5",
+    "@angular/compiler": "19.2.5",
+    "@angular/core": "19.2.5",
+    "@angular/forms": "19.2.5",
+    "@angular/platform-browser": "19.2.5",
+    "@angular/platform-browser-dynamic": "19.2.5",
+    "@angular/router": "19.2.5",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
@@ -37,49 +38,49 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.0.0",
-    "@angular-devkit/core": "~19.0.0",
-    "@angular-devkit/schematics": "~19.0.0",
-    "@angular/cli": "~19.0.0",
-    "@angular/compiler-cli": "~19.0.0",
-    "@angular/language-service": "~19.0.0",
+    "@angular-devkit/build-angular": "19.2.6",
+    "@angular-devkit/core": "19.2.6",
+    "@angular-devkit/schematics": "19.2.6",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "19.2.5",
+    "@angular/language-service": "19.2.5",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/angular": "^20.3.1",
-    "@nx/devkit": "20.3.1",
-    "@nx/eslint": "20.3.1",
-    "@nx/eslint-plugin": "20.3.1",
-    "@nx/jest": "20.3.1",
-    "@nx/js": "20.3.1",
-    "@nx/nest": "20.3.1",
-    "@nx/node": "20.3.1",
-    "@nx/playwright": "20.3.1",
-    "@nx/web": "20.3.1",
-    "@nx/webpack": "20.3.1",
-    "@nx/workspace": "20.3.1",
+    "@nx/angular": "20.7.1",
+    "@nx/devkit": "20.7.1",
+    "@nx/eslint": "20.7.1",
+    "@nx/eslint-plugin": "20.7.1",
+    "@nx/jest": "20.7.1",
+    "@nx/js": "20.7.1",
+    "@nx/nest": "20.7.1",
+    "@nx/node": "20.7.1",
+    "@nx/playwright": "20.7.1",
+    "@nx/web": "20.7.1",
+    "@nx/webpack": "20.7.1",
+    "@nx/workspace": "20.7.1",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~19.0.0",
+    "@schematics/angular": "19.2.6",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
-    "angular-eslint": "^19.0.2",
+    "angular-eslint": "19.3.0",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.1",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
-    "nx": "20.3.1",
-    "prettier": "3.1",
+    "nx": "20.7.1",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.6.2",
+    "typescript": "5.7.3",
     "typescript-eslint": "^8.13.0",
     "webpack-cli": "^5.1.4"
   }
