feat: add Prisma integration with PostgreSQL support and update dependencies

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^6.5.0",
     "@taiga-ui/addon-charts": "^4.20.0",
     "@taiga-ui/cdk": "^4.20.0",
     "@taiga-ui/core": "^4.20.0",
@@ -33,6 +34,7 @@
     "@taiga-ui/legacy": "^4.31.0",
     "axios": "^1.6.0",
     "json-server": "^1.0.0-beta.3",
+    "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "zone.js": "~0.15.0"
