Adds Tailscale connection to CI workflow
Implements a step to connect to Tailscale during CI deployment.

Enhances security and network access for the CI runner by establishing a Tailscale connection, allowing for secure access to private resources.

Updates Docker login command to use HTTP for registry access.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,15 @@ jobs:
           name: dist
           path: dist
 
+      - name: Connect to Tailscale
+        run: |
+          curl -fsSL https://tailscale.com/install.sh | sh
+          sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-ci-runner --timeout=30s
+          tailscale status
+
       - name: Login to Raspberry Pi Registry
         run: |
-          echo "${{ secrets.CR_PASSWORD }}" | docker login ${{ secrets.REGISTRY_URL }} -u ${{ secrets.CR_USER }} --password-stdin
+          echo "${{ secrets.CR_PASSWORD }}" | docker login http://${{ secrets.REGISTRY_URL }} -u ${{ secrets.CR_USER }} --password-stdin
 
       - name: Build and push backend (NestJS)
         run: |
