Adds support for insecure Docker registry
Implements configuration to allow an insecure Docker registry by creating the daemon.json file.

Restarts the Docker service to apply the changes, enabling smoother deployment processes.

Relates to security configuration improvements.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,11 @@ jobs:
           sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-ci-runner --timeout=30s
           tailscale status
 
+      - name: Allow insecure registry
+        run: |
+          echo '{ "insecure-registries": ["${{ secrets.REGISTRY_URL }}"] }' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+
       - name: Login to Raspberry Pi Registry
         run: |
           echo "${{ secrets.CR_PASSWORD }}" | docker login http://${{ secrets.REGISTRY_URL }} -u ${{ secrets.CR_USER }} --password-stdin
