--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,16 @@ jobs:
 
       - name: Build Frontend
         run: npx nx build front --configuration=production
+      
+      - name: Check dist contents
+        run: ls -R dist
+
 
       - name: Upload dist folder
         uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: .
+          path: dist
 
   docker:
     name: Build and Push Docker Images
