--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build Frontend
         run: npx nx build front --configuration=production
 
+      - name: Check dist contents
+        run: ls -R dist/apps
+
       - name: Upload dist folder
         uses: actions/upload-artifact@v4
         with:
