--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: npx nx build front --configuration=production
 
       - name: Check dist contents
-        run: ls -R dist/apps
+        run: ls -R dist/apps/api
 
       - name: Upload dist folder
         uses: actions/upload-artifact@v4
