--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist
-          path: .
+          path: dist
 
       - name: Connect to Tailscale
         run: |
@@ -56,6 +56,10 @@ jobs:
       - name: Login to Raspberry Pi Registry
         run: |
           echo "${{ secrets.CR_PASSWORD }}" | docker login http://${{ secrets.REGISTRY_URL }} -u ${{ secrets.CR_USER }} --password-stdin
+
+      - name: Check dist/apps/api presence
+        run: |
+          ls -la dist/apps/api || (echo "❌ dist/apps/api not found")
 
       - name: Build and push backend (NestJS)
         run: |
