Update Dockerfile to copy browser directory and change main entry point to browser in project.json

--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -14,7 +14,7 @@
       "options": {
         "outputPath": "dist/apps/front",
         "index": "apps/front/src/index.html",
-        "main": "apps/front/src/main.ts",
+        "browser": "apps/front/src/main.ts",
         "polyfills": [
           "zone.js"
         ],
