--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,6 +1,11 @@
 FROM node:22-alpine
 WORKDIR /app
-COPY dist/apps/api ./
-COPY node_modules ./node_modules
-COPY package.json ./
+
+# Копируем dist и package.json
+COPY dist/apps/api ./dist
+COPY package.json package-lock.json ./
+
+# Устанавливаем зависимости (без dev)
+RUN npm ci --omit=dev
+
 CMD ["node", "dist/main.js"]
