--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,11 +1,9 @@
-FROM node:22-alpine
+FROM arm64v8/node:22-alpine
 WORKDIR /app
 
-# Копируем dist и package.json
 COPY dist/apps/api ./dist
 COPY package.json package-lock.json ./
 
-# Устанавливаем зависимости (без dev)
 RUN npm ci --omit=dev
 
 CMD ["node", "dist/main.js"]
