--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,12 +57,30 @@ jobs:
         run: |
           echo "${{ secrets.CR_PASSWORD }}" | docker login http://${{ secrets.REGISTRY_URL }} -u ${{ secrets.CR_USER }} --password-stdin
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+
       - name: Build and push backend (NestJS)
-        run: |
-          docker build --platform linux/arm64 -t ${{ secrets.REGISTRY_URL }}/lifestyle-api:latest -f Dockerfile.api .
-          docker push ${{ secrets.REGISTRY_URL }}/lifestyle-api:latest
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.api
+          push: true
+          tags: ${{ secrets.REGISTRY_URL }}/lifestyle-api:latest
+          platforms: linux/arm64
+          outputs: type=registry,insecure=true
 
       - name: Build and push frontend (Angular)
-        run: |
-          docker build --platform linux/arm64 -t ${{ secrets.REGISTRY_URL }}/lifestyle-front:latest -f Dockerfile.front .
-          docker push ${{ secrets.REGISTRY_URL }}/lifestyle-front:latest
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.front
+          push: true
+          tags: ${{ secrets.REGISTRY_URL }}/lifestyle-front:latest
+          platforms: linux/arm64
+          outputs: type=registry,insecure=true
