--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -2,9 +2,13 @@ FROM arm64v8/node:22-alpine
 WORKDIR /app
 
 COPY dist/apps/api ./dist
-COPY package.json package-lock.json prisma ./
+
+COPY apps/api/prisma ./prisma
+
+COPY package.json package-lock.json ./
 
 RUN npm ci --omit=dev
+
 RUN npx prisma generate
 
 CMD ["node", "dist/main.js"]
