--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,88 +1,74 @@
-name: Build and Deploy to Raspberry Pi
+name: Build & Deploy
 
 on:
   push:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  OWNER: ${{ secrets.GHCR_OWNER }}
+  IMAGE_TAG: ${{ github.sha }}
+
 jobs:
-  build:
-    name: Build NX Projects
+  build-and-push:
+    name: Build & Push Docker Images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build API
-        run: npx nx build api --configuration=production
+      - name: Build all NX projects
+        run: npm run build:all
 
-      - name: Build Frontend
-        run: npx nx build front --configuration=production
+      - name: Log in to GHCR
+        run: echo "${{ secrets.GHCR_TOKEN }}" \
+             | docker login ghcr.io -u "${{ secrets.GHCR_OWNER }}" --password-stdin
 
-      - name: Upload dist folder
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: ./dist/
+      - name: Build & push API image
+        run: |
+          docker build \
+            --file Dockerfile.api \
+            --platform linux/arm64 \
+            -t $REGISTRY/$OWNER/lifestyle-api:$IMAGE_TAG .
+          docker push $REGISTRY/$OWNER/lifestyle-api:$IMAGE_TAG
 
-  docker:
-    name: Build and Push Docker Images
-    needs: build
+      - name: Build & push Frontend image
+        run: |
+          docker build \
+            --file Dockerfile.front \
+            --platform linux/arm64 \
+            -t $REGISTRY/$OWNER/lifestyle-front:$IMAGE_TAG .
+          docker push $REGISTRY/$OWNER/lifestyle-front:$IMAGE_TAG
+
+  deploy:
+    name: Deploy to Raspberry Pi (K3s)
+    needs: build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download dist from previous job
-        uses: actions/download-artifact@v4
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v3
         with:
-          name: dist
-          path: dist
+          version: 'latest'
 
-      - name: Connect to Tailscale
+      - name: Configure Kubeconfig
         run: |
-          curl -fsSL https://tailscale.com/install.sh | sh
-          sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-ci-runner --timeout=30s
-          tailscale status
+          echo "${{ secrets.RPI_KUBECONFIG }}" | base64 -d > kubeconfig
+          export KUBECONFIG=./kubeconfig
 
-      - name: Allow insecure registry
+      - name: Deploy manifests
         run: |
-          echo '{ "insecure-registries": ["${{ secrets.REGISTRY_URL }}"] }' | sudo tee /etc/docker/daemon.json
-          sudo systemctl restart docker
-
-      - name: Login to Raspberry Pi Registry
-        run: |
-          echo "${{ secrets.CR_PASSWORD }}" | docker login http://${{ secrets.REGISTRY_URL }} -u ${{ secrets.CR_USER }} --password-stdin
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
-
-      - name: Build and push backend (NestJS)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile.api
-          push: true
-          tags: ${{ secrets.REGISTRY_URL }}/lifestyle-api:latest
-          platforms: linux/arm64
-          builder: default
-          outputs: type=registry,insecure=true
-
-      - name: Build and push frontend (Angular)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile.front
-          push: true
-          tags: ${{ secrets.REGISTRY_URL }}/lifestyle-front:latest
-          platforms: linux/arm64
-          builder: default
-          outputs: type=registry,insecure=true
+          # если в ваших манифестах есть переменные $IMAGE_TAG, подставляем:
+          envsubst < k8s/backend-deploy.yaml  | kubectl apply -f -
+          envsubst < k8s/frontend-deploy.yaml | kubectl apply -f -
