Update repository path for k8s checkout in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Checkout lifestyle-k8s
         uses: actions/checkout@v3
         with:
-          repository: your-name/lifestyle-k8s
+          repository: evtrnist/lifestyle-k8s
           token: ${{ secrets.GHCR_TOKEN }}
           path: k8s
 
