--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,11 @@ jobs:
       - name: Configure kubeconfig
         run: echo "${{ secrets.RPI_KUBECONFIG }}" | base64 -d > $KUBECONFIG
 
+      - name: Connect to Tailscale
+        run: |
+          curl -fsSL https://tailscale.com/install.sh | sh
+          sudo tailscale up --authkey ${{ secrets.TAILSCALE_CI_KEY }} --hostname=ci-runner
+
       - name: Deploy backend manifest
         run: envsubst < k8s/base/lifestyle-api/deployment.yml | kubectl apply -f -
 
