--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^6.5.0",
     "@taiga-ui/addon-charts": "^4.20.0",
     "@taiga-ui/cdk": "^4.20.0",
@@ -45,6 +46,7 @@
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "swagger-ui-express": "^5.0.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
