--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -7,7 +7,7 @@ COPY apps/api/prisma ./prisma
 
 COPY package.json package-lock.json ./
 
-RUN npm ci --legacy-peer-deps --omit=dev
+RUN npm ci --omit=dev
 
 RUN npx prisma generate
 
