--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^6.5.0",
-    "@taiga-ui/addon-charts": "4.20.0",
-    "@taiga-ui/cdk": "4.20.0",
-    "@taiga-ui/core": "4.20.0",
+    "@taiga-ui/addon-charts": "4.40.0",
+    "@taiga-ui/cdk": "4.40.0",
+    "@taiga-ui/core": "4.40.0",
     "@taiga-ui/event-plugins": "^4.0.2",
-    "@taiga-ui/icons": "^4.30.0",
-    "@taiga-ui/kit": "4.20.0",
-    "@taiga-ui/legacy": "^4.31.0",
+    "@taiga-ui/icons": "4.40.0",
+    "@taiga-ui/kit": "4.40.0",
+    "@taiga-ui/legacy": "4.40.0",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
