--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@taiga-ui/addon-charts": "4.40.0",
     "@taiga-ui/cdk": "4.40.0",
     "@taiga-ui/core": "4.40.0",
-    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/event-plugins": "4.0.2",
     "@taiga-ui/icons": "4.40.0",
     "@taiga-ui/kit": "4.40.0",
     "@taiga-ui/legacy": "4.40.0",
