--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.5",
-    "@angular/common": "19.2.5",
-    "@angular/compiler": "19.2.5",
-    "@angular/core": "19.2.5",
-    "@angular/forms": "19.2.5",
-    "@angular/platform-browser": "19.2.5",
-    "@angular/platform-browser-dynamic": "19.2.5",
-    "@angular/router": "19.2.5",
+    "@angular/animations": "20.0.3",
+    "@angular/common": "20.0.3",
+    "@angular/compiler": "20.0.3",
+    "@angular/core": "20.0.3",
+    "@angular/forms": "20.0.3",
+    "@angular/platform-browser": "20.0.3",
+    "@angular/platform-browser-dynamic": "20.0.3",
+    "@angular/router": "20.0.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
@@ -33,10 +33,11 @@
     "@taiga-ui/addon-charts": "4.40.0",
     "@taiga-ui/cdk": "4.40.0",
     "@taiga-ui/core": "4.40.0",
-    "@taiga-ui/event-plugins": "4.0.2",
+    "@taiga-ui/event-plugins": "^4.6.0",
     "@taiga-ui/icons": "4.40.0",
     "@taiga-ui/kit": "4.40.0",
     "@taiga-ui/legacy": "4.40.0",
+    "@taiga-ui/polymorpheus": "^4.9.0",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -53,52 +54,52 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.6",
-    "@angular-devkit/core": "19.2.6",
-    "@angular-devkit/schematics": "19.2.6",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "19.2.5",
-    "@angular/language-service": "19.2.5",
+    "@angular-devkit/build-angular": "20.0.2",
+    "@angular-devkit/core": "20.0.2",
+    "@angular-devkit/schematics": "20.0.2",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.3",
+    "@angular/language-service": "20.0.3",
     "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "^10.0.2",
-    "@nx/angular": "20.7.1",
-    "@nx/devkit": "20.7.1",
-    "@nx/eslint": "20.7.1",
-    "@nx/eslint-plugin": "20.7.1",
-    "@nx/jest": "20.7.1",
-    "@nx/js": "20.7.1",
-    "@nx/nest": "20.7.1",
-    "@nx/node": "20.7.1",
-    "@nx/playwright": "20.7.1",
-    "@nx/web": "20.7.1",
-    "@nx/webpack": "20.7.1",
-    "@nx/workspace": "20.7.1",
+    "@nx/angular": "21.2.0",
+    "@nx/devkit": "21.2.0",
+    "@nx/eslint": "21.2.0",
+    "@nx/eslint-plugin": "21.2.0",
+    "@nx/jest": "21.2.0",
+    "@nx/js": "21.2.0",
+    "@nx/nest": "21.2.0",
+    "@nx/node": "21.2.0",
+    "@nx/playwright": "21.2.0",
+    "@nx/web": "21.2.0",
+    "@nx/webpack": "21.2.0",
+    "@nx/workspace": "21.2.0",
     "@openapitools/openapi-generator-cli": "^2.20.2",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "19.2.6",
+    "@schematics/angular": "20.0.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
-    "@typescript-eslint/utils": "^8.13.0",
-    "angular-eslint": "19.3.0",
-    "eslint": "^9.8.0",
+    "@typescript-eslint/utils": "^8.33.1",
+    "angular-eslint": "20.0.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
-    "nx": "20.7.1",
+    "jest-preset-angular": "14.6.0",
+    "nx": "21.2.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.7.3",
-    "typescript-eslint": "^8.13.0",
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.33.1",
     "webpack-cli": "^5.1.4"
   }
 }
