fix(deploy): specify schema path for Prisma client generation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm ci
       
       - name: Generate Prisma client
-        run: npx prisma generate
+        run: npx prisma generate --schema=apps/api/prisma/schema.prisma
 
       - name: Build all NX projects
         run: npm run build:all
