--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,16 @@ server {
   index index.html;
   server_name _;
 
+  location /api/ {
+    proxy_pass http://localhost:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # SPA fallback
   location / {
     try_files $uri $uri/ /index.html;
   }
